# gbsv_nba_v6_git

./: .env.example  .env.production  .flake8  .gitattributes  .gitignore  .pep8  Dockerfile  README.md  alembic.ini  azure.yaml  build_slate.py  predict_out.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_predict.py  slate_out.txt  test_db.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
infra/: main.bicep  main.parameters.json  stack-config.json
scripts/: bootstrap-host.ps1  deploy.ps1  export_onedrive.py  export_stack_env.py  init-terminal.ps1  post-deploy-smoke.ps1  scheduled_export.ps1  setup-env.ps1  sync_env.py
src/: __main__.py  config.py  worker.py
src/api/: dependencies.py  main.py  rate_limit.py
src/api/routes/: admin.py  health.py  model.py  odds.py  performance.py  predictions.py
src/data/: backfill.py  basketball_client.py  circuit_breaker.py  health_check.py  odds_client.py  reconciliation.py  scheduler.py  seasons.py
src/data/jobs/: dead_letter.py  maintenance.py  polling.py  predictions.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 000_initial_schema.py  001_add_clv_columns.py  002_model_registry_and_prediction_uniqueness.py  003_add_odds_sourced.py  004_player_props_and_market_expansion.py  005_data_integrity_hardening.py  006_add_referees_and_rotations.py  007_add_ingestion_failures.py  008_add_game_odds_archive.py  fe486f01aa9b_add_ingestion_failures.py
src/db/repositories/: models.py  odds.py  predictions.py
src/models/: blob_storage.py  elo.py  ensemble.py  explainability.py  features.py  odds_utils.py  ood.py  predictor.py  trainer.py  versioning.py
src/models/artifacts/: best_params.json  feature_importance.json  imputation.json  metrics.json  model_away_1h.json  model_away_1h_q10.json  model_away_1h_q90.json  model_away_fg.json  model_away_fg_q10.json  model_away_fg_q90.json  model_home_1h.json  model_home_1h_q10.json  model_home_1h_q90.json  model_home_fg.json  model_home_fg_q10.json  model_home_fg_q90.json
src/models/features/: __init__.py  _core.py  _elo.py  _game.py  _helpers.py  _market.py  _player.py  _team.py
src/notifications/: _cards.py  _csv.py  _delivery.py  _helpers.py  _html.py  _picks.py  _text.py  teams.py
src/services/: audit.py  model.py  prediction_integrity.py  predictions.py
tests/: conftest.py  test_api.py  test_api_coverage.py  test_backfill_worker.py  test_basketball_client.py  test_basketball_client_extended.py  test_basketball_persist.py  test_blob_storage.py  test_circuit_breaker.py  test_config.py  test_coverage_gaps.py  test_db_models.py  test_elo.py  test_features.py  test_features_gaps.py  test_features_props.py  test_features_vector.py  test_health.py  test_health_check.py  test_infra.py  test_main_cli.py  test_main_coverage.py  test_maintenance_jobs.py  test_migrations.py  test_model_enhancements.py  test_model_service.py  test_models.py  test_notifications_cards.py  test_notifications_csv.py  test_notifications_delivery.py  test_notifications_helpers.py  test_notifications_html.py  test_notifications_picks.py  test_notifications_text.py  test_odds_client.py  test_odds_routes_repos.py  test_odds_utils.py  test_performance.py  test_performance_dashboard.py  test_prediction_repo.py  (+25 more)
