[project]
name = "nba-gbsv-v6"
version = "6.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing --cov-fail-under=30"
markers = [
    "integration: requires a live PostgreSQL server (deselected by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true



