[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-gbsv-v6"
version = "6.0.0"
description = "NBA prediction service with API, worker, and training jobs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn[standard]==0.34.3",
    "sqlalchemy[asyncio]==2.0.41",
    "alembic==1.15.2",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "tenacity==9.1.2",
    "python-json-logger==3.3.0",
    "slowapi==0.1.9",
    "xgboost==3.2.0",
    "scikit-learn==1.8.0",
    "optuna==4.2.1",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "apscheduler==3.11.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "azure-identity==1.25.3",
    "psycopg2-binary==2.9.11",
    "shap==0.51.0",
    "lightgbm==4.6.0",
    "azure-monitor-opentelemetry==1.8.7",
    "azure-storage-blob==12.28.0",
    "tzdata==2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.1",
    "ruff==0.15.9",
]

[project.scripts]
nba-gbsv = "src.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "db/migrations/*.mako",
    "db/migrations/versions/*.py",
    "models/artifacts/*.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing --cov-fail-under=90"
markers = [
    "integration: requires a live PostgreSQL server (deselected by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true



